ajustando para passar teste do sonarqube